--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>آموزشگاه زبان پیشروان دانش</title>
-    <link rel="stylesheet" href="assets/css/main.css">
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+    <!-- حالا css ها کنار همین فایل هستن -->
+    <link rel="stylesheet" href="main.css">
+    <noscript><link rel="stylesheet" href="noscript.css"></noscript>
     <style>
         /* افکت ورود نرم */
         .fade-in-up {
@@ -72,7 +73,7 @@
     <!-- One -->
     <section id="one" class="spotlight style1 bottom">
         <span class="image fit main fade-in-up">
-            <img src="images/english.png" alt="کلاس‌ها">
+            <img src="english.png" alt="کلاس‌ها">
         </span>
         <div class="content">
             <div class="container">
@@ -98,7 +99,7 @@
     <!-- Two -->
     <section id="two" class="spotlight style2 right">
         <span class="image fit main fade-in-up">
-            <img src="images/pd.png" alt="فعالیت‌ها" style="width:30px; height:30px;">
+            <img src="pd.png" alt="فعالیت‌ها" style="width:30px; height:30px;">
         </span>
         <div class="content">
             <header>
@@ -116,7 +117,7 @@
     <!-- Three -->
     <section id="three" class="spotlight style3 left">
         <span class="image fit main bottom fade-in-up">
-            <img src="images/teacher.jpg" alt="اساتید مجرب">
+            <img src="teacher.jpg" alt="اساتید مجرب">
         </span>
         <div class="content">
             <header>
@@ -192,15 +193,15 @@
 
 </div>
 
-<!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/jquery.dropotron.min.js"></script>
-<script src="assets/js/jquery.scrollex.min.js"></script>
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>
+<!-- Scripts - همه فایل‌ها کنار HTML -->
+<script src="jquery.min.js"></script>
+<script src="jquery.scrolly.min.js"></script>
+<script src="jquery.dropotron.min.js"></script>
+<script src="jquery.scrollex.min.js"></script>
+<script src="browser.min.js"></script>
+<script src="breakpoints.min.js"></script>
+<script src="util.js"></script>
+<script src="main.js"></script>
 
 <script>
     // نمایش نرم تصاویر هنگام اسکرول
