--- a/index.html
+++ b/index.html
@@ -1,104 +1,102 @@
 <!DOCTYPE HTML>
 <html lang="fa">
-  <head>
-    <title>آموزشگاه زبان پیشروان دانش</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="main.css" />
-    <noscript><link rel="stylesheet" href="noscript.css" /></noscript>
-    <style>
-      body {
-        font-family: tahoma, sans-serif;
-        margin: 0;
-        padding: 0;
-        background: #f9f9f9;
-        color: #333;
-      }
-      header {
-        background: #4CAF50;
-        color: white;
-        padding: 15px;
-        text-align: center;
-      }
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <title>آموزشگاه زبان پیشروان دانش</title>
+  <link rel="stylesheet" href="main.css" />
+  <noscript><link rel="stylesheet" href="noscript.css" /></noscript>
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      direction: rtl;
+      background: #f4f4f4;
+    }
+    header {
+      background: #2a9d8f;
+      color: #fff;
+      padding: 1rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 1.5rem;
+    }
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      background: #264653;
+    }
+    nav ul li {
+      margin: 0;
+    }
+    nav ul li a {
+      display: block;
+      padding: 0.8rem 1.2rem;
+      color: #fff;
+      text-decoration: none;
+      font-size: 1rem;
+      transition: background 0.3s;
+    }
+    nav ul li a:hover {
+      background: #1d3557;
+    }
+    main {
+      padding: 1.5rem;
+      text-align: center;
+    }
+    footer {
+      background: #2a9d8f;
+      color: #fff;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+
+    /* واکنش‌گرا برای موبایل */
+    @media (max-width: 600px) {
       nav ul {
-        display: flex;
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        justify-content: center;
-        background: #333;
-      }
-      nav ul li {
-        margin: 0;
+        flex-direction: column;
+        align-items: stretch;
       }
       nav ul li a {
-        display: block;
-        padding: 10px 15px;
-        text-decoration: none;
-        color: white;
-      }
-      nav ul li a:hover {
-        background: #575757;
-      }
-      .container {
-        max-width: 1200px;
-        margin: auto;
-        padding: 20px;
-      }
-      img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 10px;
-      }
-      footer {
         text-align: center;
-        padding: 15px;
-        background: #333;
-        color: white;
+        font-size: 1.1rem;
       }
-
-      /* --- Responsive --- */
-      @media (max-width: 768px) {
-        nav ul {
-          flex-direction: column;
-          align-items: center;
-        }
-        nav ul li a {
-          padding: 12px;
-          width: 100%;
-          text-align: center;
-        }
-        .container {
-          padding: 10px;
-        }
-        header {
-          font-size: 18px;
-        }
+      header h1 {
+        font-size: 1.2rem;
       }
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>آموزشگاه زبان پیشروان دانش</h1>
-    </header>
+    }
+  </style>
+</head>
+<body>
 
-    <nav>
-      <ul>
-        <li><a href="#">صفحه اصلی</a></li>
-        <li><a href="#">درباره ما</a></li>
-        <li><a href="#">دوره‌ها</a></li>
-        <li><a href="#">تماس با ما</a></li>
-      </ul>
-    </nav>
+  <header>
+    <h1>آموزشگاه زبان پیشروان دانش</h1>
+  </header>
 
-    <div class="container">
-      <h2>خوش آمدید</h2>
-      <p>اینجا می‌توانید اطلاعات دوره‌های آموزشی ما را مشاهده کنید.</p>
-      <img src="classroom.jpg" alt="کلاس آموزش زبان">
-    </div>
+  <nav>
+    <ul>
+      <li><a href="index.html">صفحه اصلی</a></li>
+      <li><a href="about.html">درباره ما</a></li>
+      <li><a href="courses.html">دوره‌ها</a></li>
+      <li><a href="contact.html">تماس با ما</a></li>
+    </ul>
+  </nav>
 
-    <footer>
-      <p>تمامی حقوق محفوظ است © ۱۴۰۴ آموزشگاه زبان پیشروان دانش</p>
-    </footer>
-  </body>
+  <main>
+    <h2>خوش آمدید 🌹</h2>
+    <p>به وب‌سایت رسمی آموزشگاه زبان پیشروان دانش خوش آمدید. اینجا می‌توانید درباره دوره‌ها و خدمات ما بیشتر بدانید.</p>
+  </main>
+
+  <footer>
+    <p>© 2025 آموزشگاه زبان پیشروان دانش</p>
+  </footer>
+
+</body>
 </html>
