--- a/index.html
+++ b/index.html
@@ -1,75 +1,95 @@
 <!DOCTYPE HTML>
 <html lang="fa">
 <head>
+  <title>آموزشگاه زبان پیشروان دانش</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <title>آموزشگاه زبان پیشروان دانش</title>
   <link rel="stylesheet" href="main.css" />
   <noscript><link rel="stylesheet" href="noscript.css" /></noscript>
   <style>
     body {
+      font-family: tahoma, sans-serif;
       margin: 0;
-      font-family: sans-serif;
-      direction: rtl;
-      background: #f4f4f4;
+      padding: 0;
+      background: #f9f9f9;
+      line-height: 1.7;
     }
+
     header {
-      background: #2a9d8f;
+      background: #004aad;
       color: #fff;
       padding: 1rem;
       text-align: center;
     }
+
     header h1 {
       margin: 0;
-      font-size: 1.5rem;
+      font-size: 1.6rem;
     }
+
+    nav {
+      background: #00367a;
+    }
+
     nav ul {
-      list-style: none;
-      padding: 0;
       margin: 0;
+      padding: 0;
+      list-style: none;
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      background: #264653;
     }
+
     nav ul li {
       margin: 0;
     }
+
     nav ul li a {
       display: block;
       padding: 0.8rem 1.2rem;
       color: #fff;
       text-decoration: none;
-      font-size: 1rem;
       transition: background 0.3s;
     }
+
     nav ul li a:hover {
-      background: #1d3557;
+      background: #002b5c;
     }
+
     main {
-      padding: 1.5rem;
+      padding: 2rem;
       text-align: center;
     }
+
+    main h2 {
+      color: #004aad;
+      font-size: 1.4rem;
+    }
+
     footer {
-      background: #2a9d8f;
+      background: #00367a;
       color: #fff;
       text-align: center;
       padding: 1rem;
       margin-top: 2rem;
+      font-size: 0.9rem;
     }
 
-    /* واکنش‌گرا برای موبایل */
+    /* 📱 ریسپانسیو برای موبایل */
     @media (max-width: 600px) {
+      header h1 {
+        font-size: 1.2rem;
+      }
       nav ul {
         flex-direction: column;
         align-items: stretch;
       }
       nav ul li a {
         text-align: center;
-        font-size: 1.1rem;
+        padding: 1rem;
       }
-      header h1 {
-        font-size: 1.2rem;
+      main {
+        padding: 1rem;
       }
     }
   </style>
@@ -82,20 +102,20 @@
 
   <nav>
     <ul>
-      <li><a href="index.html">صفحه اصلی</a></li>
-      <li><a href="about.html">درباره ما</a></li>
-      <li><a href="courses.html">دوره‌ها</a></li>
-      <li><a href="contact.html">تماس با ما</a></li>
+      <li><a href="javascript:void(0)">صفحه اصلی</a></li>
+      <li><a href="javascript:void(0)">درباره ما</a></li>
+      <li><a href="javascript:void(0)">دوره‌ها</a></li>
+      <li><a href="javascript:void(0)">تماس با ما</a></li>
     </ul>
   </nav>
 
   <main>
-    <h2>خوش آمدید 🌹</h2>
-    <p>به وب‌سایت رسمی آموزشگاه زبان پیشروان دانش خوش آمدید. اینجا می‌توانید درباره دوره‌ها و خدمات ما بیشتر بدانید.</p>
+    <h2>به آموزشگاه زبان پیشروان دانش خوش آمدید</h2>
+    <p>اینجا می‌توانید زبان‌های مختلف را به ساده‌ترین روش یاد بگیرید.</p>
   </main>
 
   <footer>
-    <p>© 2025 آموزشگاه زبان پیشروان دانش</p>
+    <p>© ۱۴۰۴ - تمامی حقوق محفوظ است.</p>
   </footer>
 
 </body>
