--- a/index.html
+++ b/index.html
@@ -1,122 +1,117 @@
 <!DOCTYPE HTML>
 <html lang="fa">
-<head>
-  <title>آموزشگاه زبان پیشروان دانش</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="main.css" />
-  <noscript><link rel="stylesheet" href="noscript.css" /></noscript>
-  <style>
-    body {
-      font-family: tahoma, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f9f9f9;
-      line-height: 1.7;
-    }
-
-    header {
-      background: #004aad;
-      color: #fff;
-      padding: 1rem;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 1.6rem;
-    }
-
-    nav {
-      background: #00367a;
-    }
-
-    nav ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-
-    nav ul li {
-      margin: 0;
-    }
-
-    nav ul li a {
-      display: block;
-      padding: 0.8rem 1.2rem;
-      color: #fff;
-      text-decoration: none;
-      transition: background 0.3s;
-    }
-
-    nav ul li a:hover {
-      background: #002b5c;
-    }
-
-    main {
-      padding: 2rem;
-      text-align: center;
-    }
-
-    main h2 {
-      color: #004aad;
-      font-size: 1.4rem;
-    }
-
-    footer {
-      background: #00367a;
-      color: #fff;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
-      font-size: 0.9rem;
-    }
-
-    /* 📱 ریسپانسیو برای موبایل */
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 1.2rem;
+  <head>
+    <title>آموزشگاه زبان پیشروان دانش</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="main.css" />
+    <noscript><link rel="stylesheet" href="noscript.css" /></noscript>
+    <style>
+      body {
+        font-family: tahoma, sans-serif;
+        margin: 0;
+        padding: 0;
+        background: #f9f9f9;
+        color: #333;
+        line-height: 1.7;
+      }
+      header {
+        background: #4CAF50;
+        color: white;
+        padding: 15px;
+        text-align: center;
       }
       nav ul {
-        flex-direction: column;
-        align-items: stretch;
+        display: flex;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        justify-content: center;
+        background: #333;
+        flex-wrap: wrap;
+      }
+      nav ul li {
+        margin: 0;
       }
       nav ul li a {
+        display: block;
+        padding: 10px 20px;
+        text-decoration: none;
+        color: white;
+        transition: background 0.3s ease;
+      }
+      nav ul li a:hover {
+        background: #575757;
+      }
+      .container {
+        max-width: 1200px;
+        margin: auto;
+        padding: 20px;
         text-align: center;
-        padding: 1rem;
       }
-      main {
-        padding: 1rem;
+      h2 {
+        color: #4CAF50;
       }
-    }
-  </style>
-</head>
-<body>
+      img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 10px;
+        margin-top: 15px;
+      }
+      footer {
+        text-align: center;
+        padding: 15px;
+        background: #333;
+        color: white;
+        margin-top: 20px;
+      }
 
-  <header>
-    <h1>آموزشگاه زبان پیشروان دانش</h1>
-  </header>
+      /* --- Responsive --- */
+      @media (max-width: 768px) {
+        nav ul {
+          flex-direction: column;
+          align-items: center;
+        }
+        nav ul li a {
+          padding: 12px;
+          width: 100%;
+          text-align: center;
+        }
+        .container {
+          padding: 15px;
+        }
+        header {
+          font-size: 18px;
+          padding: 10px;
+        }
+        h2 {
+          font-size: 20px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>آموزشگاه زبان پیشروان دانش</h1>
+    </header>
 
-  <nav>
-    <ul>
-      <li><a href="javascript:void(0)">صفحه اصلی</a></li>
-      <li><a href="javascript:void(0)">درباره ما</a></li>
-      <li><a href="javascript:void(0)">دوره‌ها</a></li>
-      <li><a href="javascript:void(0)">تماس با ما</a></li>
-    </ul>
-  </nav>
+    <nav>
+      <ul>
+        <li><a href="javascript:void(0)">صفحه اصلی</a></li>
+        <li><a href="javascript:void(0)">درباره ما</a></li>
+        <li><a href="javascript:void(0)">دوره‌ها</a></li>
+        <li><a href="javascript:void(0)">تماس با ما</a></li>
+      </ul>
+    </nav>
 
-  <main>
-    <h2>به آموزشگاه زبان پیشروان دانش خوش آمدید</h2>
-    <p>اینجا می‌توانید زبان‌های مختلف را به ساده‌ترین روش یاد بگیرید.</p>
-  </main>
+    <div class="container">
+      <h2>خوش آمدید</h2>
+      <p>اینجا می‌توانید اطلاعات دوره‌های آموزشی ما را مشاهده کنید.</p>
+      <img src="classroom.jpg" alt="کلاس آموزش زبان">
+    </div>
 
-  <footer>
-    <p>© ۱۴۰۴ - تمامی حقوق محفوظ است.</p>
-  </footer>
-
-</body>
+    <footer>
+      <p>تمامی حقوق محفوظ است © ۱۴۰۴ آموزشگاه زبان پیشروان دانش</p>
+    </footer>
+  </body>
 </html>
