--- a/index.html
+++ b/index.html
@@ -1,11 +1,104 @@
-@media (max-width: 768px) {
-  body {
-    font-size: 14px;
-  }
-  .container {
-    padding: 10px;
-  }
-  nav ul {
-    flex-direction: column;
-  }
-}
+<!DOCTYPE HTML>
+<html lang="fa">
+  <head>
+    <title>آموزشگاه زبان پیشروان دانش</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="main.css" />
+    <noscript><link rel="stylesheet" href="noscript.css" /></noscript>
+    <style>
+      body {
+        font-family: tahoma, sans-serif;
+        margin: 0;
+        padding: 0;
+        background: #f9f9f9;
+        color: #333;
+      }
+      header {
+        background: #4CAF50;
+        color: white;
+        padding: 15px;
+        text-align: center;
+      }
+      nav ul {
+        display: flex;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        justify-content: center;
+        background: #333;
+      }
+      nav ul li {
+        margin: 0;
+      }
+      nav ul li a {
+        display: block;
+        padding: 10px 15px;
+        text-decoration: none;
+        color: white;
+      }
+      nav ul li a:hover {
+        background: #575757;
+      }
+      .container {
+        max-width: 1200px;
+        margin: auto;
+        padding: 20px;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 10px;
+      }
+      footer {
+        text-align: center;
+        padding: 15px;
+        background: #333;
+        color: white;
+      }
+
+      /* --- Responsive --- */
+      @media (max-width: 768px) {
+        nav ul {
+          flex-direction: column;
+          align-items: center;
+        }
+        nav ul li a {
+          padding: 12px;
+          width: 100%;
+          text-align: center;
+        }
+        .container {
+          padding: 10px;
+        }
+        header {
+          font-size: 18px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>آموزشگاه زبان پیشروان دانش</h1>
+    </header>
+
+    <nav>
+      <ul>
+        <li><a href="#">صفحه اصلی</a></li>
+        <li><a href="#">درباره ما</a></li>
+        <li><a href="#">دوره‌ها</a></li>
+        <li><a href="#">تماس با ما</a></li>
+      </ul>
+    </nav>
+
+    <div class="container">
+      <h2>خوش آمدید</h2>
+      <p>اینجا می‌توانید اطلاعات دوره‌های آموزشی ما را مشاهده کنید.</p>
+      <img src="classroom.jpg" alt="کلاس آموزش زبان">
+    </div>
+
+    <footer>
+      <p>تمامی حقوق محفوظ است © ۱۴۰۴ آموزشگاه زبان پیشروان دانش</p>
+    </footer>
+  </body>
+</html>
