--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>آموزشگاه زبان پیشروان دانش</title>
-    <link rel="stylesheet" href="assets/css/main.css">
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+    <link rel="stylesheet" href="main.css">
+    <noscript><link rel="stylesheet" href="noscript.css"></noscript>
     <style>
         /* افکت ورود نرم */
         .fade-in-up {
@@ -26,7 +26,7 @@
     <header id="header">
         <h1 id="logo">
             <a href="index.html">
-                <img src="images/pd.png" alt="پیشروان دانش" style="height:50px;" class="fade-in-up">
+                <img src="pd.png" alt="پیشروان دانش" style="height:50px;" class="fade-in-up">
             </a>
         </h1>
         <nav id="nav">
@@ -63,7 +63,7 @@
                 <p>با آموزشگاه زبان پیشروان دانش در منطقه 17 تهران، یادگیری زبان انگلیسی آسان و لذت‌بخش است.</p>
             </header>
             <span class="image fade-in-up">
-                <img src="images/pd.png" alt="آموزشگاه زبان پیشروان دانش">
+                <img src="pd.png" alt="آموزشگاه زبان پیشروان دانش">
             </span>
         </div>
         <a href="#one" class="goto-next scrolly">بعدی</a>
@@ -72,7 +72,7 @@
     <!-- One -->
     <section id="one" class="spotlight style1 bottom">
         <span class="image fit main fade-in-up">
-            <img src="images/english.png" alt="کلاس‌ها">
+            <img src="english.png" alt="کلاس‌ها">
         </span>
         <div class="content">
             <div class="container">
@@ -98,7 +98,7 @@
     <!-- Two -->
     <section id="two" class="spotlight style2 right">
         <span class="image fit main fade-in-up">
-            <img src="images/pd.png" alt="فعالیت‌ها" style="width:30px; height:30px;">
+            <img src="pd.png" alt="فعالیت‌ها" style="width:30px; height:30px;">
         </span>
         <div class="content">
             <header>
@@ -219,4 +219,5 @@
 
 </body>
 </html>
+
 
