--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- One -->
     <section id="one" class="spotlight style1 bottom">
         <span class="image fit main fade-in-up">
-            <img src="english.png" alt="کلاس‌ها">
+            <img src="image/english.png" alt="کلاس‌ها">
         </span>
         <div class="content">
             <div class="container">
@@ -219,5 +219,6 @@
 
 </body>
 </html>
+
 
 
