--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- One -->
     <section id="one" class="spotlight style1 bottom">
         <span class="image fit main fade-in-up">
-            <img src="image/english.png" alt="کلاس‌ها">
+            <img src="english.png" alt="کلاس‌ها">
         </span>
         <div class="content">
             <div class="container">
@@ -116,7 +116,7 @@
     <!-- Three -->
     <section id="three" class="spotlight style3 left">
         <span class="image fit main bottom fade-in-up">
-            <img src="images/teacher.jpg" alt="اساتید مجرب">
+            <img src="teacher.jpg" alt="اساتید مجرب">
         </span>
         <div class="content">
             <header>
@@ -219,6 +219,7 @@
 
 </body>
 </html>
+
 
 
 
