--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML> <html lang="fa"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>آموزشگاه زبان پیشروان دانش</title> <link rel="stylesheet" href="main.css"> <noscript><link rel="stylesheet" href="noscript.css"></noscript> <!-- اضافه کردن Font Awesome --> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <style> /* افکت ورود نرم */ .fade-in-up { opacity: 0; transform: translateY(20px); transition: opacity 1s ease-out, transform 1s ease-out; } .fade-in-up.visible { opacity: 1; transform: translateY(0); } </style> </head> <body class="is-preload landing"> <div id="page-wrapper"> <!-- Header --> <header id="header"> <h1 id="logo"> <a href="index.html"> <img src="pd.png" alt="پیشروان دانش" style="height:50px;" class="fade-in-up"> </a> </h1> <nav id="nav"> <ul> <li><a href="index.html">خانه</a></li> <li> <a href="#">کلاس‌ها</a> <ul> <li><a href="#">انگلیسی عمومی</a></li> <li><a href="#">تافل و آیلتس</a></li> <li><a href="#">کودکان و نوجوانان</a></li> <li> <a href="#">بیشتر</a> <ul> <li><a href="#">کارگاه‌ها</a></li> <li><a href="#">کلاس آنلاین</a></li> <li><a href="#">تخفیف‌ها</a></li> <li><a href="#">ثبت‌نام گروهی</a></li> </ul> </li> </ul> </li> <li><a href="#">درباره ما</a></li> <!-- دکمه ثبت نام --> <li><a href="https://zabansarapd.ir/home/branch/1" target="_blank" class="button primary">ثبت‌نام</a></li> </ul> </nav> </header> <!-- Banner --> <section id="banner"> <div class="content"> <header> <h2>آینده زبان شما با ما شروع می‌شود</h2> <p>با آموزشگاه زبان پیشروان دانش در منطقه 17 تهران، یادگیری زبان انگلیسی آسان و لذت‌بخش است.</p> </header> <span class="image fade-in-up"> <img src="pd.png" alt="آموزشگاه زبان پیشروان دانش"> </span> </div> <a href="#one" class="goto-next scrolly">بعدی</a> </section> <!-- One --> <section id="one" class="spotlight style1 bottom"> <span class="image fit main fade-in-up"> <img src="english.png" alt="کلاس‌ها"> </span> <div class="content"> <div class="container"> <div class="row"> <div class="col-4 col-12-medium"> <header> <h2>چرا پیشروان دانش؟</h2> <p>مدرن‌ترین متدها و اساتید مجرب در محیطی انگیزه‌بخش</p> </header> </div> <div class="col-4 col-12-medium"> <p>آموزشگاه زبان پیشروان دانش با بهره‌گیری از متدهای نوین آموزشی، کلاس‌های انگلیسی عمومی، تافل، آیلتس و دوره‌های ویژه کودکان و نوجوانان را برگزار می‌کند. تمرکز بر مکالمه، مهارت‌های شنیداری و نوشتاری باعث تسلط سریع و کاربردی دانشجویان بر زبان می‌شود.</p> </div> <div class="col-4 col-12-medium"> <p>Pishrovan Danesh Language Institute in District 17, Tehran, provides modern and engaging English language courses for all ages. With a focus on conversation, listening, and writing skills, students achieve practical mastery of English quickly and effectively.</p> </div> </div> </div> </div> <a href="#two" class="goto-next scrolly">بعدی</a> </section> <!-- Two --> <section id="two" class="spotlight style2 right"> <span class="image fit main fade-in-up"> <img src="pd.png" alt="فعالیت‌ها" style="width:30px; height:30px;"> </span> <div class="content"> <header> <h2>فعالیت‌ها و کارگاه‌ها</h2> <p>تجربه‌ای واقعی از یادگیری زبان</p> </header> <p>کارگاه‌ها، آزمون‌های مستمر و فعالیت‌های فرهنگی باعث می‌شوند یادگیری زبان در محیطی پویا و جذاب انجام شود.</p> <ul class="actions"> <li><a href="#" class="button">اطلاعات بیشتر</a></li> </ul> </div> <a href="#three" class="goto-next scrolly">بعدی</a> </section> <!-- Three --> <section id="three" class="spotlight style3 left"> <span class="image fit main bottom fade-in-up"> <img src="teacher.jpg" alt="اساتید مجرب"> </span> <div class="content"> <header> <h2>اساتید مجرب</h2> <p>تضمین یادگیری سریع و موثر</p> </header> <p>اساتید پیشروان دانش با تجربه و مهارت بالا، محیطی دوستانه و حمایت‌کننده ایجاد می‌کنند که باعث پیشرفت سریع و لذت‌بخش زبان‌آموزان می‌شود.</p> <ul class="actions"> <li><!DOCTYPE HTML>
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
@@ -135,112 +135,6 @@
         </div>
         <a href="#four" class="goto-next scrolly">بعدی</a>
     </section>
-<!---->
-    <!-- Four -->
-<section id="four" class="wrapper style1 special fade-up">
-    <div class="container">
-        <header class="major">
-            <h2>خدمات و امکانات آموزشگاه</h2>
-            <p>کلاس‌های متنوع، محیط دوستانه و فعالیت‌های جانبی متناسب با اهداف دانشجویان</p>
-        </header>
-        <div class="features">
-            <div class="feature-card">
-                <span class="icon solid major fa-comments"></span>
-                <h3>کلاس‌های مکالمه</h3>
-                <p>تمرکز بر تقویت مهارت گفتاری و شنیداری</p>
-            </div>
-            <div class="feature-card">
-                <span class="icon solid major fa-book"></span>
-                <h3>دوره‌های تخصصی</h3>
-                <p>تافل، آیلتس و دوره‌های ویژه کودکان</p>
-            </div>
-            <div class="feature-card">
-                <span class="icon solid major fa-chalkboard-teacher"></span>
-                <h3>اساتید مجرب</h3>
-                <p>تضمین یادگیری سریع و موثر</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<style>
-    /* کارت‌ها */
-    .features {
-        display: flex;
-        justify-content: center;
-        align-items: stretch;
-        gap: 1rem;
-        flex-wrap: nowrap; /* افقی بمونن */
-        overflow-x: auto; /* اسکرول افقی در موبایل */
-        padding: 1rem 0;
-        scroll-snap-type: x mandatory;
-    }
-
-    .feature-card {
-        flex: 0 0 auto;
-        min-width: 250px;
-        background: #fff;
-        border-radius: 1.2rem;
-        padding: 1.5rem;
-        text-align: center;
-        box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-        scroll-snap-align: center;
-        transition: transform 0.4s ease, box-shadow 0.4s ease;
-        opacity: 0;
-        transform: translateY(50px);
-        animation: fadeUp 1s forwards;
-    }
-
-    .feature-card:nth-child(1) { animation-delay: 0.2s; }
-    .feature-card:nth-child(2) { animation-delay: 0.4s; }
-    .feature-card:nth-child(3) { animation-delay: 0.6s; }
-
-    .feature-card:hover {
-        transform: translateY(-10px) scale(1.05);
-        box-shadow: 0 12px 25px rgba(0,0,0,0.15);
-    }
-
-    .feature-card .icon {
-        font-size: 3rem;
-        margin-bottom: 1rem;
-        color: #ff6b6b;
-    }
-
-    @keyframes fadeUp {
-        to {
-            opacity: 1;
-            transform: translateY(0);
-        }
-    }
-
-    /* دسکتاپ */
-    @media (min-width: 768px) {
-        .features {
-            flex-wrap: wrap; /* در دسکتاپ چند ستون */
-            overflow-x: hidden;
-        }
-        .feature-card {
-            flex: 1 1 calc(33.333% - 1rem);
-            min-width: unset;
-        }
-    }
-</style>
-
-<script>
-    // اجرای انیمیشن کارت‌ها هنگام اسکرول
-    function revealFeatureCards() {
-        const cards = document.querySelectorAll('.feature-card');
-        const windowBottom = window.innerHeight + window.scrollY;
-        cards.forEach(card => {
-            if(card.getBoundingClientRect().top + window.scrollY < windowBottom - 50) {
-                card.style.opacity = 1;
-                card.style.transform = 'translateY(0)';
-            }
-        });
-    }
-    window.addEventListener('scroll', revealFeatureCards);
-    window.addEventListener('load', revealFeatureCards);
-</script>
 
     <!-- Four -->
     <section id="four" class="wrapper style1 special fade-up">
@@ -338,4 +232,3 @@
 
 </body>
 </html>
-
